src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>UPPER(LEFT(SUBSTITUTE(Name,&apos;.&apos;,&apos;&apos;), 2))&amp;RIGHT(text(YEAR( DATEVALUE( CreatedDate ) )), 2)&amp;&quot;-&quot;&amp;LEFT(  External_ID__c ,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>BillingCity +  BillingCountry +  BillingState +  BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Check Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Managing Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Agency)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account_ID__c</fullName>
        <formula>Parent.Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Key Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North-East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North-West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South-East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South-West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_ID__c</fullName>
        <inlineHelpText>SAP ID is supplied by the finance department</inlineHelpText>
        <label>SAP ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI Blacklisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Car Supermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>heroku_last_sync__c</fullName>
        <label>heroku_last_sync</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <validationRules>
        <fullName>Billing_address_cannot_be_blank</fullName>
        <active>true</active>
        <description>The billing address is mandatory</description>
        <errorConditionFormula>IF(ISNEW(), FALSE,OR( ISBLANK( BillingCity ), ISBLANK( BillingStreet ), 
ISBLANK(  BillingPostalCode )))</errorConditionFormula>
        <errorDisplayField>BillingStreet</errorDisplayField>
        <errorMessage>Please enter a billing address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Check_Passed</fullName>
        <active>true</active>
        <description>When finance informs the sales team that the account passed the credit check, the SAP ID must be populated.</description>
        <errorConditionFormula>IF(
ISNEW(),
FALSE,AND(( Credit_Check_Passed__c = TRUE), ISBLANK( SAP_ID__c )))</errorConditionFormula>
        <errorDisplayField>SAP_ID__c</errorDisplayField>
        <errorMessage>Please enter the SAP ID for this account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_number_can_only_contain_digits</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(REGEX(Phone, &quot;0\\D*?(\\d\\D*?){10}&quot;))
,$Profile.Name != &apos;API User Profile&apos;)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please ensure the number starts with a 0 and is 11 digits long</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UK_Postcode_format</fullName>
        <active>true</active>
        <description>Checks that the post code is a UK format  of letters and digits (LL11 1LL)</description>
        <errorConditionFormula>IF( 
ISNEW(), 
FALSE,NOT(OR(

ISNULL( BillingPostalCode ),

REGEX( BillingPostalCode , &quot;[a-zA-Z]\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX(BillingPostalCode , &quot;[a-zA-Z]\\d\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX( BillingPostalCode , &quot;[a-zA-Z]{2}\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX( BillingPostalCode , &quot;[a-zA-Z]{2}\\d\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX(BillingPostalCode , &quot;[a-zA-Z]{2}\\d[a-zA-Z]\\s\\d[a-zA-Z]{2}&quot;),

REGEX( BillingPostalCode , &quot;[a-zA-Z]\\d[a-zA-Z]\\s\\d[a-zA-Z]{2}&quot;)

)))</errorConditionFormula>
        <errorDisplayField>BillingPostalCode</errorDisplayField>
        <errorMessage>Please ensure the format for this postcode is correct (LL11 1LL)</errorMessage>
    </validationRules>
</CustomObject>